trunk/Archive2/9d/3d7d6057efc0e2/output
main.cpp:1:5: error: unknown type name 'point3d'
    point3d get_intersection(point3d topfrontleft, point3d backbottomright, point3d source)
    ^
main.cpp:1:30: error: unknown type name 'point3d'
    point3d get_intersection(point3d topfrontleft, point3d backbottomright, point3d source)
                             ^
main.cpp:1:52: error: unknown type name 'point3d'
    point3d get_intersection(point3d topfrontleft, point3d backbottomright, point3d source)
                                                   ^
main.cpp:1:77: error: unknown type name 'point3d'
    point3d get_intersection(point3d topfrontleft, point3d backbottomright, point3d source)
                                                                            ^
main.cpp:4:9: error: unknown type name 'point3d'
        point3d middle(topfrontleft.x/2+backbottomright.x/2,
        ^
5 errors generated.
